# asvoria-smart-contracts

evm_contracts/: hardhat.config.ts  package-lock.json  package.json
evm_contracts/contracts/: Factory.sol  LaunchpadFactory.sol  PresaleFactory.sol  Token.sol  TokenLaunchpad.sol  TokenPresale.sol
evm_contracts/contracts/launchpad/: TokenLaunchpad.sol
evm_contracts/contracts/launchpad/affiliate-program/: AffiliateProgram.sol
evm_contracts/test/: Launchpad.ts
solana-contracts/asvoria-staking-contract/: Anchor.toml
solana-contracts/asvoria-staking-contract/programs/asvoria-staking-contract/: Cargo.toml
solana-contracts/asvoria-staking-contract/tests/: asvoria-staking-contract.ts
solana-contracts/token_launchpad/: Anchor.toml
solana-contracts/token_launchpad/programs/launchpad_factory/: Cargo.toml
solana-contracts/token_launchpad/programs/launchpad_factory/src/: constants.rs  errors.rs  events.rs  instructions.rs  lib.rs  states.rs  utils.rs
solana-contracts/token_launchpad/programs/token_launchpad/: Cargo.toml
solana-contracts/token_launchpad/tests/: launchpad_factory.ts  token_launchpad.ts
standard-land/: .env  package.json  tailwind.config.js
standard-land/public/: index.html
standard-land/src/: App.tsx  Home.tsx  MintButton.tsx  index.css
standard-land/src/Pages/: PremiumLand.tsx  Standard.tsx
web3chan-main/: package-lock.json  package.json
web3chan-main/public/: index.html
web3chan-main/src/: App.css  App.tsx  Home.tsx  MintButton.tsx  index.css
web3chan-main/src/layout/: Footer.jsx  Header.jsx
(+40 files in other folders)
