[package]
name = "launchpad_factory"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "launchpad_factory"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = {version="0.30.1", features=["init-if-needed"]}
anchor-spl = "0.30.1"
solana-program = "1.18.17"
token_launchpad = { path = "../token_launchpad", features = ["cpi"] }